--- a/Dockerfile.npm
+++ b/Dockerfile.npm
@@ -1,26 +1,22 @@
-# pull source image for buid
-FROM node:20
-# update latest os and install some package for buid
-RUN apt-get update && apt-get install libvips-dev -y
-# set up environment
-ENV NODE_ENV=development
-# change directory
+FROM node:16
+
+#RUN apt-get update && apt-get install libvips-dev -y
+
 WORKDIR /opt/
-# copy file install
+
+
 COPY ./package.json ./package-lock.json ./
-# set up path
-ENV PATH /opt/node_modules/.bin:$PATH
-# custom time to build
-# RUN yarn config set network-timeout 600000 -g && yarn install
-# RUN npm install
-# set working directory to app
-WORKDIR /opt/app
-# copy all file to app folder
+
+ENV PATH /opt/node/node_modules/.bin:$PATH
+
+
+WORKDIR /opt/app/
+
 COPY ./ .
-# build
-RUN npm install
-# RUN npm run build
-# define port to run
+
+RUN npm install --ignore-scripts=false --foreground-scripts --verbose sharp
+RUN npm run build
+
 EXPOSE 1337
-# runing
-CMD [ "npm", "run", "develop"]
+
+CMD ["npm", "run", "develop"]
